--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="javascripts/train.js"></script>
 		<script type="text/javascript" src="javascripts/wander.js"></script>
     <script type="text/javascript" src="javascripts/battle.js"></script>
+    <script type="text/javascript" src="javascripts/round.js"></script>
     <script type="text/javascript" src="javascripts/start.js"></script>
 		<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
