Add Volcano and Demon NPC

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="javascripts/avatars.js"></script>
 		<script type="text/javascript" src="javascripts/player.js"></script>
 		<script type="text/javascript" src="javascripts/rival.js"></script>
+		<script type="text/javascript" src="javascripts/people.js"></script>
 	  <script type="text/javascript" src="javascripts/drawfigure.js"></script>
     <script type="text/javascript" src="javascripts/io.js"></script>
 		<script type="text/javascript" src="javascripts/loadsave.js"></script>
