--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Clan: Inception</title>
+    <title>Clan: Inception 2.0.1</title>
     <script type="text/javascript" src="javascripts/jquery-min.js"></script>
     <script type="text/javascript" src="javascripts/jquery-ui-min.js"></script>
     <script type="text/javascript" src="javascripts/utility.js"></script>
