Revise Children display + version number

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Clan: Inception 2.0.4</title>
+    <title></title>
     <script type="text/javascript" src="javascripts/jquery-min.js"></script>
     <script type="text/javascript" src="javascripts/jquery-ui-min.js"></script>
 		<script type="text/javascript" src="javascripts/jquery.xcolor.min.js"></script>
@@ -75,8 +75,9 @@
           </div>
           <div class="stat-container" id="goods">
 						<font size="-1"><b>Camp Details</b></font>
+						<span class="stat-text">Children: <span id="player_kids"></span></span>		
             <div id="goods" class="changra-container"></div>
-            <span class="stat-text">Goods: <span id="player_goods"></span></span>
+            <span class="stat-text">Goods: <span id="player_goods"></span></span>		
           </div>					
         </div>
 
