--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script type="text/javascript" src="javascripts/jquery-min.js"></script>
-    <script type="text/javascript" src="javascripts/jquery-ui-min.js"></script>
-		<script type="text/javascript" src="javascripts/jquery.xcolor.min.js"></script>
-    <script type="text/javascript" src="javascripts/utility.js"></script>
-    <script type="text/javascript" src="javascripts/avatars.js"></script>
-		<script type="text/javascript" src="javascripts/player.js"></script>
-		<script type="text/javascript" src="javascripts/rival.js"></script>
-		<script type="text/javascript" src="javascripts/people.js"></script>
-	  <script type="text/javascript" src="javascripts/drawfigure.js"></script>
-    <script type="text/javascript" src="javascripts/io.js"></script>
-    <script type="text/javascript" src="javascripts/camp.js"></script>
-		<script type="text/javascript" src="javascripts/wander.js"></script>
-    <script type="text/javascript" src="javascripts/battle.js"></script>
-		<script type="text/javascript" src="javascripts/train.js"></script>
-    <script type="text/javascript" src="javascripts/round.js"></script>
-    <script type="text/javascript" src="javascripts/start.js"></script>
-		<script type="text/javascript" src="javascripts/cycle-min.js"></script>
-		<script type="text/javascript" src="javascripts/loadsave.js"></script>
-		<script type="text/javascript" src="javascripts/main.js"></script>
-		<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+    	<script type="text/javascript" src="javascripts/jquery-min.js"></script>
+    	<script type="text/javascript" src="javascripts/jquery-ui-min.js"></script>
+	<script type="text/javascript" src="javascripts/jquery.xcolor.min.js"></script>
+    	<script type="text/javascript" src="javascripts/utility.js"></script>
+    	<script type="text/javascript" src="javascripts/avatars.js"></script>
+	<script type="text/javascript" src="javascripts/player.js"></script>
+	<script type="text/javascript" src="javascripts/rival.js"></script>
+	<script type="text/javascript" src="javascripts/people.js"></script>
+	<script type="text/javascript" src="javascripts/drawfigure.js"></script>
+    	<script type="text/javascript" src="javascripts/io.js"></script>
+    	<script type="text/javascript" src="javascripts/camp.js"></script>
+	<script type="text/javascript" src="javascripts/wander.js"></script>
+    	<script type="text/javascript" src="javascripts/battle.js"></script>
+	<script type="text/javascript" src="javascripts/train.js"></script>
+    	<script type="text/javascript" src="javascripts/round.js"></script>
+    	<script type="text/javascript" src="javascripts/start.js"></script>
+	<script type="text/javascript" src="javascripts/cycle-min.js"></script>
+	<script type="text/javascript" src="javascripts/loadsave.js"></script>
+	<script type="text/javascript" src="javascripts/main.js"></script>
+	<script type="text/javascript" src="javascripts/woman.js"></script>	
+<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   </head>
   <body onmousedown="return false;">
     <div class="main">
