--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<script type="text/javascript" src="javascripts/cycle-min.js"></script>
 	<script type="text/javascript" src="javascripts/loadsave.js"></script>
 	<script type="text/javascript" src="javascripts/main.js"></script>
-	<script type="text/javascript" src="javascripts/woman.js"></script>	
+	<script type="text/javascript" src="javascripts/woman.js"></script>
+	<script type="text/javascript" src="javascripts/items.js"></script>
 <link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
 <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   </head>
