--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    	<script type="text/javascript" src="javascripts/jquery-min.js"></script>
-    	<script type="text/javascript" src="javascripts/jquery-ui-min.js"></script>
-	<script type="text/javascript" src="javascripts/jquery.xcolor.min.js"></script>
-    	<script type="text/javascript" src="javascripts/utility.js"></script>
-    	<script type="text/javascript" src="javascripts/avatars.js"></script>
-	<script type="text/javascript" src="javascripts/player.js"></script>
-	<script type="text/javascript" src="javascripts/rival.js"></script>
-	<script type="text/javascript" src="javascripts/people.js"></script>
-	<script type="text/javascript" src="javascripts/drawfigure.js"></script>
-    	<script type="text/javascript" src="javascripts/io.js"></script>
-    	<script type="text/javascript" src="javascripts/camp.js"></script>
-	<script type="text/javascript" src="javascripts/wander.js"></script>
-    	<script type="text/javascript" src="javascripts/battle.js"></script>
-	<script type="text/javascript" src="javascripts/train.js"></script>
-    	<script type="text/javascript" src="javascripts/round.js"></script>
-    	<script type="text/javascript" src="javascripts/start.js"></script>
-	<script type="text/javascript" src="javascripts/cycle-min.js"></script>
-	<script type="text/javascript" src="javascripts/loadsave.js"></script>
-	<script type="text/javascript" src="javascripts/main.js"></script>
-	<script type="text/javascript" src="javascripts/woman.js"></script>
-	<script type="text/javascript" src="javascripts/items.js"></script>
-<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
-<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+		<script type="text/javascript" src="javascripts/jquery-min.js"></script>
+		<script type="text/javascript" src="javascripts/jquery-ui-min.js"></script>
+		<script type="text/javascript" src="javascripts/jquery.xcolor.min.js"></script>
+		<script type="text/javascript" src="javascripts/utility.js"></script>
+		<script type="text/javascript" src="javascripts/avatars.js"></script>
+		<script type="text/javascript" src="javascripts/player.js"></script>
+		<script type="text/javascript" src="javascripts/rival.js"></script>
+		<script type="text/javascript" src="javascripts/people.js"></script>
+		<script type="text/javascript" src="javascripts/drawfigure.js"></script>
+		<script type="text/javascript" src="javascripts/io.js"></script>
+		<script type="text/javascript" src="javascripts/camp.js"></script>
+		<script type="text/javascript" src="javascripts/wander.js"></script>
+		<script type="text/javascript" src="javascripts/battle.js"></script>
+		<script type="text/javascript" src="javascripts/train.js"></script>
+		<script type="text/javascript" src="javascripts/craft.js"></script>
+		<script type="text/javascript" src="javascripts/round.js"></script>
+		<script type="text/javascript" src="javascripts/start.js"></script>
+		<script type="text/javascript" src="javascripts/cycle-min.js"></script>
+		<script type="text/javascript" src="javascripts/loadsave.js"></script>
+		<script type="text/javascript" src="javascripts/main.js"></script>
+		<script type="text/javascript" src="javascripts/woman.js"></script>
+		<script type="text/javascript" src="javascripts/items.js"></script>
+		<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
+		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   </head>
   <body onmousedown="return false;">
     <div class="main">
@@ -76,10 +77,10 @@
 						<span id="rcexperience" class="stat-text stat-text--right">Your Experience: <span id="player_experience"></span></span>				
           </div>
           <div class="stat-container" id="goods">
-						<font size="-1"><b>Camp Details</b></font>
-						<span class="stat-text">Children: <span id="player_kids"></span></span>		
-            <div id="goods" class="changra-container"></div>
-            <span class="stat-text">Goods: <span id="player_goods"></span></span>		
+						<font size="-1"><b>Camp Details</b></font><br/>
+						<span class="stat-text-noh">Children: <span id="player_kids"></span></span>								
+						<span class="stat-text-noh" id="metal_label">Metal: <span id="player_metal"></span></span>	
+            <span class="stat-text-noh">Goods: <span id="player_goods"></span></span>		
           </div>					
         </div>
 
