--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<script type="text/javascript" src="javascripts/main.js"></script>
 		<script type="text/javascript" src="javascripts/woman.js"></script>
 		<script type="text/javascript" src="javascripts/items.js"></script>
+		<script type="text/javascript" src="javascripts/thoth.js"></script>
 		<link rel="stylesheet" type="text/css" href="stylesheets/jquery-ui.css">
 		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
   </head>
